@@ -1,2 +1,2 @@
-SUBDIRS = src
+SUBDIRS = src man
 EXTRA_DIST = autogen.sh
